# dominion

./: .bazelignore  .bazelrc  .gitignore  .ignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
common/gopkg/grpc/: BUILD.bazel  README.md  default.go
common/gopkg/grpc/solver/: BUILD.bazel  dial.go  dial_test.go  resolver.go  solver_test.go
common/gopkg/grpc/tls/: BUILD.bazel  tls_test.go
common/gopkg/s3/: BUILD.bazel  README.md
experimental/add/: BUILD.bazel  add_test.go
experimental/golang/hello_world/: BUILD.bazel
experimental/golang/mongo_demo/: BUILD.bazel  deploy.yaml  mongo_demo.proto
experimental/golang/mongo_demo/cmd/: BUILD.bazel  main.go  service.yaml
experimental/golang/mongo_demo/storage/: BUILD.bazel  fake.go  model.go  mongo.go  mongo_test.go  storage.go  storage_test.go
experimental/golang/mongo_demo/testplan/: BUILD.bazel  interface_test.go  interface_test.md
experimental/grpc_hello_world/: BUILD.bazel  deploy.yaml  deployment.yaml  hello_world.proto
experimental/grpc_hello_world/client/: BUILD.bazel  main.go
experimental/grpc_hello_world/gateway/: BUILD.bazel  main.go  service.yaml
experimental/grpc_hello_world/proto/: BUILD.bazel  hello_world.proto
experimental/grpc_hello_world/service/: BUILD.bazel  deployment.yaml  main.go  service.yaml
experimental/grpc_hello_world/testplan/: BUILD.bazel  interface_test.go  interface_test.md
experimental/mongo_demo/cmd/: BUILD.bazel  main.go  service.yaml
experimental/mongo_demo/storage/: BUILD.bazel  fake.go  model.go  mongo.go  mongo_test.go  storage.go  storage_test.go
experimental/ts/hello_world/: BUILD.bazel  package.json  tsconfig.json
experimental/ts/hello_world/src/: main.ts
pkg/grpc/: BUILD.bazel  README.md  default.go  grpc_test.go
pkg/grpc/solver/: BUILD.bazel  dial.go  dial_test.go  env.go  k8s.go  resolver.go  solver_test.go  target.go
pkg/grpc/tls/: BUILD.bazel  tls.go
pkg/grpc/tls/testdata/: server_wrong_san.crt
pkg/mongo/: BUILD.bazel  client.go  client_test.go  credentials.go  credentials_test.go  default.go  env.go  env_test.go  target.go  target_test.go
pkg/solver/: BUILD.bazel  deploy_http_client.go  deploy_http_client_test.go  deploy_resolver.go  deploy_stateful_resolver.go  deploy_stateful_resolver_test.go  env.go  env_test.go  k8s.go  k8s_test.go  stateful_resolver.go  target.go  target_test.go
pkg/testtool/: BUILD.bazel  testtool.go  testtool_test.go
projects/game/gateway/: BUILD.bazel  README.md  gateway.proto  handler.go  handler_test.go  service.yaml  ws.go  ws_test.go
projects/game/gateway/app/: BUILD.bazel  bootstrap.go  server.go
projects/game/gateway/domain/: BUILD.bazel  control.go  domain_test.go  errors.go  media.go  message.go  runtime.go
projects/game/gateway/service/: BUILD.bazel  control.go  control_test.go  gateway.go  gateway_test.go
projects/game/gateway/testplan/: BUILD.bazel  interface_test.go  interface_test.yaml  test_deploy.yaml
projects/game/session/: BUILD.bazel  README.md  handler.go  handler_test.go  service.yaml  session.proto
projects/game/session/app/: BUILD.bazel  bootstrap.go  server.go
projects/game/session/domain/: BUILD.bazel  errors.go  repository.go  session.go  session_test.go
projects/game/session/service/: BUILD.bazel  service.go  service_test.go
projects/game/session/testplan/: BUILD.bazel  interface_test.go  interface_test.yaml  test_deploy.yaml
projects/game/testplan/: BUILD.bazel  helpers.go  interface_test.go  interface_test.md  interface_test.yaml  session_gateway_test.go  session_gateway_test.yaml  session_gateway_test_deploy.yaml
projects/game/windows_agent/: BUILD.bazel  electron-builder.yml  package.json  release.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wails.json
projects/game/windows_agent/assets/: BUILD.bazel  assets.go
projects/game/windows_agent/frontend/: index.html  package.json  tsconfig.json
projects/game/windows_agent/proto/: BUILD.bazel  protobuf_ts_codegen.bzl  protoc_gen_ts_entry.cjs  tsconfig.json
projects/game/windows_agent/release/: BUILD.bazel  checksum.go  checksum_test.go  main.go  manifest.go  manifest_test.go  publish.go  publish_test.go
projects/game/windows_agent/scripts/: download-ffmpeg.sh
projects/infra/deploy/: BUILD.bazel  README.md  deploy.proto  handler.go  handler_test.go  integration_test.go  k8s.yaml  main.go  main_test.go  prod_deploy.yaml  reconciler.go  repository_fake_test.go  service.yaml  test_deploy.yaml
projects/infra/deploy/app/: BUILD.bazel  bootstrap.go  server.go
projects/infra/deploy/domain/: BUILD.bazel  environment.go  environment_name.go  environment_name_test.go  environment_test.go  environment_type.go  errors.go  errors_test.go  queue.go  queue_test.go  recovery.go  recovery_test.go  repository.go  service_endpoints_name.go  service_endpoints_name_test.go  spec.go  spec_test.go  state.go  state_test.go  worker.go  worker_test.go
projects/infra/deploy/runtime/: BUILD.bazel  fake.go  fake_test.go  interface.go  interface_test.go
projects/infra/deploy/storage/: BUILD.bazel  memory.go  memory_test.go  mongo.go  mongo_test.go
projects/infra/deploy/testplan/: BUILD.bazel  integration_test.go  interface_test.md  test_deploy.yaml
tools/deploy/: BUILD.bazel  README.md  deploy.schema.json  deploy.schema.yaml  install.sh  main.go  main_test.go  service.schema.json  service.schema.yaml
tools/deploy/cmd/: BUILD.bazel  main.go  main_test.go
tools/deploy/pkg/config/: BUILD.bazel  config.go  config_test.go
tools/deploy/pkg/deploy/: BUILD.bazel
tools/deploy/pkg/env/: BUILD.bazel  env.go  env_test.go  identity.go  identity_test.go
tools/deploy/plans/: deploy_tool_dev_plan.md
tools/deploy/v2/: BUILD.bazel  apply.go  apply_test.go  del.go  del_list_test.go  install.sh  list.go  main.go  main_test.go  scope.go
tools/guitar/cmd/: BUILD.bazel  guitar.go
tools/release/s3push/: BUILD.bazel  main.go  manifest.go  manifest_test.go  publish.go  publish_test.go  runfiles.go  runfiles_test.go  staging.go  staging_test.go
(+405 files in other folders)
