load("@gazelle//:def.bzl", "gazelle")

# gazelle:go_grpc_compilers @rules_go//proto:go_grpc_v2, @rules_go//proto:go_proto, @grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway

# gazelle:resolve proto google/api/annotations.proto @googleapis//google/api:annotations_proto
# gazelle:resolve proto google/api/http.proto @googleapis//google/api:http_proto
# gazelle:resolve proto google/api/field_behavior.proto @googleapis//google/api:field_behavior_proto
# gazelle:resolve proto google/api/resource.proto @googleapis//google/api:resource_proto
# gazelle:resolve proto google/api/client.proto @googleapis//google/api:client_proto

# gazelle:resolve proto go google/api/annotations.proto @googleapis//google/api:annotations_go_proto
# gazelle:resolve proto go google/api/http.proto @googleapis//google/api:http_go_proto
# gazelle:resolve proto go google/api/field_behavior.proto @googleapis//google/api:field_behavior_go_proto
# gazelle:resolve proto go google/api/resource.proto @googleapis//google/api:resource_go_proto
# gazelle:resolve proto go google/api/client.proto @googleapis//google/api:client_go_proto

gazelle(
    name = "gazelle",
    extra_args = [
        "-index=lazy",
    ],
)
