load("@gazelle//:def.bzl", "gazelle")

# gazelle:go_grpc_compilers @rules_go//proto:go_grpc_v2, @rules_go//proto:go_proto, @grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway
# gazelle:map_kind go_test go_unittest //tools/go:defs.bzl
# gazelle:alias_kind go_largetest go_test

# gazelle:resolve proto google/api/annotations.proto @googleapis//google/api:annotations_proto
# gazelle:resolve proto google/api/http.proto @googleapis//google/api:http_proto
# gazelle:resolve proto google/api/field_behavior.proto @googleapis//google/api:field_behavior_proto
# gazelle:resolve proto google/api/resource.proto @googleapis//google/api:resource_proto
# gazelle:resolve proto google/api/client.proto @googleapis//google/api:client_proto
# gazelle:resolve proto google/protobuf/empty.proto @com_google_protobuf//:empty_proto
# gazelle:resolve proto google/protobuf/field_mask.proto @com_google_protobuf//:field_mask_proto
# gazelle:resolve proto google/protobuf/timestamp.proto @com_google_protobuf//:timestamp_proto

# gazelle:resolve proto go google/api/annotations.proto @googleapis//google/api:annotations_go_proto
# gazelle:resolve proto go google/api/http.proto @googleapis//google/api:http_go_proto
# gazelle:resolve proto go google/api/field_behavior.proto @googleapis//google/api:field_behavior_go_proto
# gazelle:resolve proto go google/api/resource.proto @googleapis//google/api:resource_go_proto
# gazelle:resolve proto go google/api/client.proto @googleapis//google/api:client_go_proto
# gazelle:resolve proto go google/protobuf/empty.proto @com_google_protobuf//:empty_go_proto
# gazelle:resolve proto go google/protobuf/field_mask.proto @com_google_protobuf//:field_mask_go_proto
# gazelle:resolve proto go google/protobuf/timestamp.proto @com_google_protobuf//:timestamp_go_proto

load("@npm//:defs.bzl", "npm_link_all_packages")

gazelle(
    name = "gazelle",
    extra_args = [
        "-index=lazy",
    ],
)

alias(
    name = "deploy_install",
    actual = "//tools/deploy/v2:install",
)

alias(
    name = "guitar_install",
    actual = "//tools/guitar:install",
)

# 生成 node_modules（运行时需要）
npm_link_all_packages()
