module(
    name = "dominion",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "tar.bzl", version = "0.9.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983")
bazel_dep(name = "googleapis-go", version = "1.0.0")
bazel_dep(name = "grpc_ecosystem_grpc_gateway", version = "2.27.6")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_xeipuuv_gojsonschema", "in_gopkg_yaml_v3", "org_golang_google_grpc")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:97406725e9ca912013f59ae49fa3362d44f2745c07eba00705247216225b810c",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")
