load("@rules_go//go:def.bzl", "go_library")
load("//tools/go:defs.bzl", "go_unittest")

go_library(
    name = "add",
    srcs = ["add.go"],
    importpath = "dominion/experimental/add",
    visibility = ["//visibility:public"],
)

go_unittest(
    name = "add_test",
    srcs = ["add_test.go"],
    embed = [":add"],
)
