load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mongo",
    srcs = [
        "client.go",
        "credentials.go",
        "default.go",
        "env.go",
        "target.go",
    ],
    importpath = "dominion/pkg/mongo",
    visibility = ["//visibility:public"],
    deps = [
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
    ],
)

go_test(
    name = "mongo_test",
    size = "small",
    srcs = [
        "client_test.go",
        "credentials_test.go",
        "env_test.go",
        "target_test.go",
    ],
    embed = [":mongo"],
    deps = [
        "@org_mongodb_go_mongo_driver//mongo",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/fake",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//testing",
    ],
)
