load("@rules_go//go:def.bzl", "go_library")
load("//tools/dev/go:defs.bzl", "go_unittest")

go_library(
    name = "mongo",
    srcs = [
        "client.go",
        "credentials.go",
        "default.go",
    ],
    importpath = "dominion/pkg/mongo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/solver",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_unittest(
    name = "mongo_test",
    srcs = [
        "client_test.go",
        "credentials_test.go",
    ],
    embed = [":mongo"],
    deps = [
        "//pkg/solver",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
