load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "solver",
    srcs = [
        "env.go",
        "k8s.go",
        "target.go",
    ],
    importpath = "dominion/pkg/solver",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
    ],
)

go_test(
    name = "solver_test",
    size = "small",
    srcs = [
        "env_test.go",
        "k8s_test.go",
        "target_test.go",
    ],
    embed = [":solver"],
    deps = [
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/fake",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//testing",
    ],
)
