load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

go_library(
    name = "deploy_lib",
    srcs = ["main.go"],
    importpath = "dominion/tools/deploy",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/deploy/pkg/config",
        "//tools/deploy/pkg/env",
        "//tools/deploy/pkg/k8s",
        "//tools/deploy/pkg/workspace",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "deploy",
    embed = [":deploy_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "deploy_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":deploy_lib"],
    deps = [
        "//tools/deploy/pkg/env",
        "//tools/deploy/pkg/k8s",
    ],
)

sh_binary(
    name = "install",
    srcs = ["install.sh"],
    data = [
        ":deploy",
        "@bazel_tools//tools/bash/runfiles",
    ],
    visibility = ["//visibility:public"],
)
