load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_world_lib",
    srcs = ["main.go"],
    importpath = "dominion/experimental/golang/hello_world",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello_world",
    embed = [":hello_world_lib"],
    visibility = ["//visibility:public"],
)
