load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "dominion/experimental/grpc_hello_world/client",
    visibility = ["//visibility:private"],
    deps = [
        "//experimental/grpc_hello_world/proto:grpc_hello_world",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
