load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@tar.bzl", "mutate", "tar")

go_library(
    name = "gateway_lib",
    srcs = ["main.go"],
    importpath = "dominion/experimental/grpc_hello_world/gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//experimental/grpc_hello_world/proto:grpc_hello_world",
        "@grpc_ecosystem_grpc_gateway//runtime",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "gateway",
    embed = [":gateway_lib"],
    visibility = ["//visibility:public"],
)

tar(
    name = "gateway_tar",
    srcs = [
        ":gateway",
    ],
    mutate = mutate(strip_prefix = package_name() + "/gateway_"),
)

oci_image(
    name = "gateway_image",
    base = "@distroless_base",
    entrypoint = ["/gateway"],
    tars = [":gateway_tar"],
)

expand_template(
    name = "stamped",
    out = "_stamped.tags.txt",
    stamp_substitutions = {"dev": "{{BUILD_EMBED_LABEL}}"},
    template = ["dev"],
)

oci_push(
    name = "gateway_image_push",
    image = ":gateway_image",
    remote_tags = ":stamped",
    repository = "registry.liukexin.com/experimental/grpc_hello_world/gateway",
)
