load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_lib",
    srcs = ["main.go"],
    importpath = "dominion/experimental/grpc_hello_world/service",
    visibility = ["//visibility:private"],
    deps = [
        "//experimental/grpc_hello_world/proto:grpc_hello_world",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "service",
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)
