load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@tar.bzl", "tar")

go_library(
    name = "service_lib",
    srcs = ["main.go"],
    importpath = "dominion/experimental/grpc_hello_world/service",
    visibility = ["//visibility:private"],
    deps = [
        "//experimental/grpc_hello_world/proto:grpc_hello_world",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "service",
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)

tar(
    name = "service_tar",
    srcs = [
        ":service",
    ],
)

oci_image(
    name = "service_image",
    base = "@distroless_base",
    entrypoint = ["/service"],
    tars = [":service_tar"],
)

oci_push(
    name = "service_image_push",
    image = ":service_image",
    repository = "registry.liukexin.com/experimental/grpc_hello_world/service",
)
