load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "fake.go",
        "model.go",
        "mongo.go",
        "storage.go",
    ],
    importpath = "dominion/experimental/mongo_demo/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//experimental/mongo_demo",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_test(
    name = "storage_test",
    size = "small",
    srcs = [
        "mongo_test.go",
        "storage_test.go",
    ],
    embed = [":storage"],
    deps = [
        "//experimental/mongo_demo",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
