load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

# 编译 TS
ts_project(
    name = "lib",
    srcs = ["src/main.ts"],
    transpiler = swc,
    tsconfig = ":tsconfig.json",
    declaration = True,
)

# 运行入口
js_binary(
    name = "run",
    data = [":lib"],
    entry_point = "src/main.js",
)
