load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "solver",
    srcs = [
        "dial.go",
        "env.go",
        "k8s.go",
        "resolver.go",
        "target.go",
    ],
    importpath = "dominion/pkg/grpc/solver",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//resolver",
    ],
)

go_test(
    name = "solver_test",
    size = "small",
    srcs = [
        "dial_test.go",
        "solver_test.go",
    ],
    embed = [":solver"],
    deps = [
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/fake",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//testing",
        "@org_golang_google_grpc//resolver",
        "@org_golang_google_grpc//serviceconfig",
    ],
)
