load("@rules_go//go:def.bzl", "go_library")
load("//tools/dev/go:defs.bzl", "go_unittest")

go_library(
    name = "tls",
    srcs = ["tls.go"],
    importpath = "dominion/pkg/grpc/tls",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_grpc//credentials"],
)

go_unittest(
    name = "tls_test",
    srcs = ["tls_test.go"],
    data = glob(["testdata/**"]),
    embed = [":tls"],
)
