load("//tools/go:defs.bzl", "go_largetest")

go_largetest(
    name = "testplan_test",
    size = "small",
    srcs = [
        "helpers.go",
        "session_gateway_test.go",
    ],
    env = {
        "SESSION_TOKEN_SECRET": "dev-session-token-secret",
    },
    deps = [
        "//pkg/solver",
        "//pkg/testtool",
        "//projects/game/gateway",
        "//projects/game/pkg/token",
        "//projects/game/session",
        "@com_github_coder_websocket//:websocket",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
