load("@rules_go//go:def.bzl", "go_library")
load("//tools/dev/go:defs.bzl", "go_largetest")

go_largetest(
    name = "testplan_test",
    size = "small",
    srcs = [
        "helpers.go",
        "session_gateway_test.go",
    ],
    env = {
        "SESSION_TOKEN_SECRET": "dev-session-token-secret",
    },
    deps = [
        "//common/gopkg/solver",
        "//common/gopkg/testtool",
        "//projects/game/gateway",
        "//projects/game/pkg/token",
        "//projects/game/session",
        "@com_github_coder_websocket//:websocket",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_library(
    name = "testplan",
    srcs = ["helpers.go"],
    importpath = "dominion/projects/game/testplan",
    visibility = ["//visibility:public"],
    deps = [
        "//common/gopkg/testtool",
        "//projects/game/session",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
